# bargauge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONFIGURATION.md  boot_log.txt  convert_logo.py  monitor_log.txt  monitor_log_2.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  logo_img.c  lvgl_port_v9.c  lvgl_sw_rotation.c  modbus_master.c  modbus_master.h  modbus_set_relay_snippet.c  mqtt_publisher.c  mqtt_publisher.h  rx8025t.c  rx8025t.h
